<resources>
    <string name="app_name">TMS07</string>
    <string name="hw_1">1</string>
    <string name="_2">2</string>
    <string name="this_is_my_homework"><u>This is my homework</u></string>
    <string name="homework_1">HomeWork_1</string>
    <string name="homework_2">homework_2</string>
    <string name="homework_3">homework_3</string>
    <string name="homework_4">homework_4</string>
    <string name="homework_5">homework_5</string>
    <string name="homework_6">homework_6</string>
    <string name="homework_8">homework_8</string>
    <string name="homework_9">homework_9</string>
    <string name="url_picture">Введите url картинки</string>
    <string name="click_on_me">click on me</string>
    <string name="pictureoutput">pictureOutput</string>
    <string name="find">Find</string>
    <string name="error_empty_url">URL should be non-empty</string>
    <string name="flags">Flags</string>
    <string name="animation">Animation</string>
    <string name="todo">TODO</string>
    <string name="brest_region">Brest region</string>
    <string name="corn">corn</string>
    <string name="potatoes">potatoes</string>
    <string name="cabbage">cabbage</string>
    <string name="beet">beet</string>
    <string name="vitebsk_region">Vitebsk region</string>
    <string name="gomel_region">Gomel region</string>
    <string name="grodno_region">Grodno region</string>
    <string name="mogilev_region">Mogilev region</string>
    <string name="minsk_region">Minsk region</string>
    <string name="belarusian_seed_race">Belarusian seed race</string>
    <string name="start">start</string>
    <string name="_20">20</string>
    <string name="picture_output">picture_output</string>
    <string name="snowdrop_day">Snowdrop Day</string>
    <string name="show_snowdrops">show snowdrops</string>
    <string name="add_snowdrop">add snowdrop</string>
    <string name="enter_the_name_of_the_snowdrop">Enter the name of the snowdrop</string>
    <string name="enter_the_length_of_the_bulb">Enter the length of the bulb</string>
    <string name="enter_the_length_snowdrop">Enter the length snowdrop</string>
    <string name="add_to_collection">add to collection</string>
    <string name="save">save</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_length">Enter the length</string>
    <string name="show_info">show info</string>
    <string name="snowdrop_flower">Snowdrop Flower</string>
    <string name="snowdrop_added">Snowdrop added:)</string>
    <string name="snowdrop_added_successfully">Snowdrop added successfully:)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="ok">OK</string>
    <string name="enter">enter</string>
    <string name="one_step_closer_to_space">One step closer to space</string>
    <string name="great_job">Great job!</string>
    <string name="enter_username_please">Enter username, please</string>
    <string name="enter_password_please">Enter password, please</string>
    <string name="too_long_password">Too long password</string>
    <string name="it_should_not_be_empty">It should not be empty</string>
    <string name="welcome">Welcome, </string>
    <string name="base_is_empty">Base is empty. Enter the data, please </string>
    <string name="tulips">tulips</string>
    <string name="tape">tape</string>
    <string name="click_hero">click hero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hero_picture">hero_picture</string>
    <string name="congratulation">congratulation</string>
    <string name="victory_picture">victory_picture</string>
    <string name="background">background</string>
    <string name="homework_7">homework_7</string>
    <string name="year">Year</string>
    <string name="price">price</string>
    <string name="brand">Brand</string>
    <string name="input_brand_of_car">Input brand of car</string>
    <string name="input_year_of_issue">Input year of issue</string>
    <string name="input_price">Input price</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="load_all_info">load all info</string>
    <string name="year_of_issue">Year of issue</string>
    <string name="search_by_brand">search by brand</string>
    <string name="error">Error</string>
    <string name="name">name</string>
    <string name="cryptocurrencies">Cryptocurrencies</string>
    <string name="percent">percent</string>
    <string name="data">data</string>
    <string name="dollar">$</string>
    <string name="percent_sign">%</string>
    <string name="read_me">READ ME</string>
    <string name="homework_11">homework_11</string>
    <string name="country">country</string>
    <string name="date">date</string>
    <string name="holiday">holiday</string>

    <string-array name="brand">
        <item>Audi</item>
        <item>Bmw</item>
        <item>Lexus</item>
    </string-array>
</resources>