<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background9may"
            android:contentDescription="@string/background" />

        <ImageView
            android:layout_width="218dp"
            android:layout_height="301dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/hero"
            android:contentDescription="@string/hero_picture" />

        <ImageView
            android:layout_width="386dp"
            android:layout_height="546dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/congratulation_9may"
            android:contentDescription="@string/congratulation" />

        <ImageView
            android:layout_width="174dp"
            android:layout_height="167dp"
            android:layout_marginTop="450dp"
            android:background="@drawable/victory"
            android:contentDescription="@string/victory_picture" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>