<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background9may"
            android:contentDescription="@string/background" />

        <ImageView
            android:layout_width="332dp"
            android:layout_height="473dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/text9may"
            android:contentDescription="@string/tulips" />

        <Button
            android:id="@+id/click_hero_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="280dp"
            android:text="@string/click_hero"
            android:textColor="#FF0000" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>