<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="14dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/coin_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/shape_oval_blue"
            android:contentDescription="@+id/coin_photo"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coin_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/coin_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dollar_sign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginHorizontal="16dp"
            android:maxLines="1"
            android:text="@string/dollar"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/coin_photo"
            app:layout_constraintTop_toBottomOf="@+id/coin_name" />

        <TextView
            android:id="@+id/coin_price"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:hint="@string/price"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/dollar_sign"
            app:layout_constraintTop_toBottomOf="@+id/coin_name" />

        <TextView
            android:id="@+id/data_coin"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:hint="@string/data"
            android:maxLines="1"
            android:textColor="#E53935"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/coin_photo"
            app:layout_constraintTop_toBottomOf="@+id/coin_price" />

        <TextView
            android:id="@+id/coin_percent"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:hint="@string/percent"
            android:maxLines="1"
            android:textColor="#E53935"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/percent_sign"
            app:layout_constraintTop_toBottomOf="@+id/coin_price" />

        <TextView
            android:id="@+id/percent_sign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            android:text="@string/percent_sign"
            android:textColor="#E53935"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/data_coin"
            app:layout_constraintTop_toBottomOf="@+id/coin_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>