<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="16dp"
    app:cardBackgroundColor="#CCFFFFFF"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/search_car"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:maxLines="1"
            android:text="@string/brand"
            android:textColor="#3949AB"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/item_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/brand"
            android:maxLines="1"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/brand"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:maxLines="1"
            android:text="@string/year_of_issue"
            android:textColor="#3949AB"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/item_photo"
            app:layout_constraintTop_toBottomOf="@+id/brand" />

        <TextView
            android:id="@+id/item_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/year"
            android:maxLines="1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/year"
            app:layout_constraintTop_toBottomOf="@+id/item_brand" />


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:maxLines="1"
            android:text="@string/price"
            android:textColor="#3949AB"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/item_photo"
            app:layout_constraintTop_toBottomOf="@+id/year" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/price"
            android:maxLines="1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/item_year" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>