<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snowdrop"
    tools:context=".HW4Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/snowdrop_day"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <FrameLayout

        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="50dp"

        app:layout_constraintBottom_toTopOf="@+id/button_add_snowdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_add_snowdrop"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#4682B4"
        android:text="@string/add_snowdrop"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container"
        app:layout_constraintVertical_bias="0.718">

    </Button>

    <Button
        android:id="@+id/button_show_info"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="#4682B4"
        android:text="@string/show_info"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_snowdrop"
        app:layout_constraintVertical_bias="0.156">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>